--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.59",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
+    "animate.css": "^4.1.1",
     "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
     "i18next": "^23.6.0",
