--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "animate.css": "^4.1.1",
     "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
+    "firebase": "^10.6.0",
     "i18next": "^23.6.0",
     "i18next-browser-languagedetector": "^7.1.0",
     "luxon": "^3.4.3",
