--- a/.github/workflows/firrebase-functions-build-deploy.yml
+++ b/.github/workflows/firrebase-functions-build-deploy.yml
@@ -18,4 +18,4 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: npm install -g firebase-tools
-      - run: firebase deploy --only functions
+      - run: firebase login && firebase deploy --only functions
