--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "i18next-browser-languagedetector": "^7.1.0",
     "luxon": "^3.4.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-i18next": "^13.3.1",
