Filter event list by user permissions

--- a/web/package.json
+++ b/web/package.json
@@ -55,6 +55,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.2.0",
+    "@types/bootstrap": "^5.2.10",
     "@types/luxon": "^3.3.3"
   }
 }
