--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "sass": "^1.69.5",
+    "swr": "^2.2.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
